feat: add station maintenance actions
